--- a/lab_02_30/app/src/ui/mainwindow.ui
+++ b/lab_02_30/app/src/ui/mainwindow.ui
@@ -92,6 +92,12 @@
                   <height>0</height>
                  </size>
                 </property>
+                <property name="minimum">
+                 <double>-1000.000000000000000</double>
+                </property>
+                <property name="maximum">
+                 <double>1000.000000000000000</double>
+                </property>
                </widget>
               </item>
              </layout>
@@ -112,6 +118,12 @@
                   <width>100</width>
                   <height>0</height>
                  </size>
+                </property>
+                <property name="minimum">
+                 <double>-1000.000000000000000</double>
+                </property>
+                <property name="maximum">
+                 <double>1000.000000000000000</double>
                 </property>
                </widget>
               </item>
@@ -163,6 +175,9 @@
                     <height>0</height>
                    </size>
                   </property>
+                  <property name="minimum">
+                   <double>-1000.000000000000000</double>
+                  </property>
                   <property name="maximum">
                    <double>1000.000000000000000</double>
                   </property>
@@ -187,8 +202,14 @@
                     <height>0</height>
                    </size>
                   </property>
+                  <property name="minimum">
+                   <double>-1000.000000000000000</double>
+                  </property>
                   <property name="maximum">
                    <double>1000.000000000000000</double>
+                  </property>
+                  <property name="value">
+                   <double>0.000000000000000</double>
                   </property>
                  </widget>
                 </item>
@@ -241,6 +262,12 @@
                     <width>100</width>
                     <height>0</height>
                    </size>
+                  </property>
+                  <property name="minimum">
+                   <double>-1000.000000000000000</double>
+                  </property>
+                  <property name="maximum">
+                   <double>1000.000000000000000</double>
                   </property>
                  </widget>
                 </item>
@@ -305,6 +332,12 @@
                     <width>100</width>
                     <height>0</height>
                    </size>
+                  </property>
+                  <property name="minimum">
+                   <double>-10.000000000000000</double>
+                  </property>
+                  <property name="maximum">
+                   <double>10.000000000000000</double>
                   </property>
                   <property name="value">
                    <double>1.000000000000000</double>
